Bug fixes on mobile and gallery

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ header {
 main {
     margin-left: 15%;
     margin-right: 15%;
-
+    
     display: grid;
     grid-area: header;
     grid-template-areas: "header" "main";
@@ -108,13 +108,65 @@ header.lead {
 }
 
 main .lead p {
-    font-size: 8rem;
+    font-size: 4rem;
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
     text-shadow: violet 0 6px 0;
     text-align: center;
 }
+
+body.btg {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #08AEEA;
+    background-image: linear-gradient(330deg, #08AEEA 0%, #5ABAAE 100%);
+    background-position: top;
+    background-repeat: no-repeat;
+    color: white;
+}
+
+body.bio, body.pos {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #ffffff;
+    color: #170727;
+}
+
+body.pos p {
+    color: #72729D;
+}
+
+body.delta p a {
+    text-decoration: underline;
+}
+/* 
+.navbar-brand svg {
+    transition: all 0.3s ease-in-out;
+    opacity: 0;
+    height: 100vh;
+    width: 90px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 200;
+}
+
+.navbar-brand svg:hover {
+    opacity: 1;
+    translate: 10%;
+}
+
+.navbar-light .navbar-brand svg {
+    background-color: white;
+}
+.navbar-dark .navbar-brand svg {
+    background-color: #170727;
+} */
 
 .gallery {
     display: grid;
@@ -135,13 +187,8 @@ main .lead p {
     overflow: hidden;
 }
 
-.gallery .thumb:hover {
-    /* transform: scale(1.2) translateZ(0); */
-    
-}
-
 .gallery .thumb a {
-    color: transparent;
+    color: white;
     
     font-size: 1.6rem;
     font-weight: 700;
@@ -149,25 +196,25 @@ main .lead p {
     text-decoration: none;
     width: 100%;
     height: 55vh;
-
+    
     display: grid;
     align-content: center;
-
+    
     padding-left: 1rem;
     padding-right: 1rem;
-
+    
     /* display: block; */
     /* padding: 160px 15px; */
-
+    
     /* position: relative; */
     /* top: 50%; */
     /* transform: translate(0, -50%); */
-
+    
     /* background: rgba(23, 7, 39, 0.4), linear-gradient(180deg, rgba(96, 148, 234, 0.4) 0%, rgba(240, 47, 194, 0.7) 100%); */
-
+    
     /* background-color: rgba(255, 60, 172, 1); */
     /* background-image: linear-gradient(180deg, rgba(255, 60, 172, .7) 0%, rgba(120, 75, 160, .7) 50%, rgba(43, 134, 197, .9) 100%); */
-
+    
     background-image: linear-gradient(180deg, rgba(249, 83, 198, 0.3) 0%, rgba(185, 29, 115, 1) 100%);
 }
 
@@ -185,7 +232,7 @@ main .lead p {
     background-size: cover;
 }
 .gallery .thumb:nth-child(2) {
-    background: url(assets/img/pos/pos-mock-1.jpg) 0 center no-repeat fixed;
+    background: url(assets/img/pos/pos-mock-1.jpg) center no-repeat fixed;
 }
 .gallery .thumb:nth-child(3) {
     background: url(assets/img/bio/clinicalBIO-3.png) center center no-repeat fixed;
@@ -209,13 +256,6 @@ main .lead p {
     transition: all 0.6s ease;
 }
 
-@media only screen and (min-width: 768px) {
-    .gallery {
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
-    }
-}
-
 .social {
     font-size: 2rem;
 }
@@ -228,35 +268,28 @@ main .lead p {
     opacity: .5;
 }
 
-body.btg {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #08AEEA;
-    background-image: linear-gradient(330deg, #08AEEA 0%, #5ABAAE 100%);
-    background-position: top;
-    background-repeat: no-repeat;
-
-    color: white;
-}
-
-body.bio, body.pos {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #ffffff;
-    color: #170727;
-}
-
-body.pos p      { color: #72729D; }
-
 .card-shadow {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
-  
+
 .card-shadow:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+@media only screen and (min-width: 768px) {
+    .gallery {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+    
+    main .lead p {
+        font-size: 8rem;
+    }
+}
+
+@media only screen and (min-width: 1025) {
+    .gallery .thumb a {
+        color: transparent;
+    }
 }
